project java complete

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>edu.utng</groupId>
   <artifactId>project_java</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>project_java</name>
   <!-- FIXME change it to the project's website -->
